Switch JDK17 -> JDK11
For project configuration missing.